--- a/package.json
+++ b/package.json
@@ -33,19 +33,20 @@
     "@storybook/builder-webpack5": "^6.3.7",
     "@storybook/react": "^6.3.7",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/react": "^11.2.7",
-    "babel-jest": "^27.0.6",
+    "@testing-library/react": "^12.0.0",
+    "babel-jest": "^27.1.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^5.2.7",
+    "css-loader": "^6.2.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.24.0",
-    "eslint-webpack-plugin": "^2.5.4",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.0.6",
+    "jest": "^27.1.0",
     "jest-transform-stub": "^2.0.0",
-    "mini-css-extract-plugin": "^1.6.2",
+    "mini-css-extract-plugin": "^2.2.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
@@ -53,13 +54,13 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
-    "recoil": "^0.4.0",
+    "recoil": "^0.4.1",
     "sass": "^1.37.5",
     "sass-loader": "^12.1.0",
     "serve": "^12.0.0",
     "webpack": "^5.50.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^3.11.2",
+    "webpack-dev-server": "^4.0.0",
     "workbox-webpack-plugin": "^6.2.4"
   }
 }
