--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "1.0.0",
   "scripts": {
     "start": "webpack serve --mode development",
-    "build:all": "npm-run-all --serial -c build:storybook build:app",
     "serve": "serve build -p 3000",
     "test": "jest",
-    "storybook": "start-storybook -p 6006",
-    "build": "webpack --mode production",
-    "build:storybook": "build-storybook --quiet -o public/storybook"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
@@ -30,12 +27,6 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
-    "@storybook/addon-actions": "^6.3.8",
-    "@storybook/addon-essentials": "^6.3.8",
-    "@storybook/addon-links": "^6.3.8",
-    "@storybook/builder-webpack5": "^6.3.8",
-    "@storybook/manager-webpack5": "^6.3.8",
-    "@storybook/react": "^6.3.8",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^12.0.0",
     "babel-jest": "^27.1.1",
@@ -51,7 +42,6 @@
     "jest": "^27.1.1",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.2.2",
-    "npm-run-all": "^4.1.5",
     "postcss": "^8.3.6",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
