--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.15.4",
-    "@theninthsky/react-essentials": "^1.0.3",
     "clsx": "^1.1.1",
+    "frontend-essentials": "^1.0.0",
     "prop-types": "^15.7.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
@@ -30,7 +30,7 @@
     "@babel/preset-react": "^7.14.5",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^12.1.0",
-    "babel-jest": "^27.2.1",
+    "babel-jest": "^27.2.2",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
@@ -40,10 +40,10 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.2.1",
+    "jest": "^27.2.2",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.3.0",
-    "postcss": "^8.3.7",
+    "postcss": "^8.3.8",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "react": "^17.0.2",
@@ -52,9 +52,9 @@
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "serve": "^12.0.1",
-    "webpack": "^5.53.0",
+    "webpack": "^5.54.0",
     "webpack-cli": "^4.8.0",
-    "webpack-dev-server": "^4.2.1",
+    "webpack-dev-server": "^4.3.0",
     "workbox-webpack-plugin": "^6.3.0"
   }
 }
