--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   "dependencies": {
     "@babel/runtime": "^7.15.4",
     "clsx": "^1.1.1",
-    "frontend-essentials": "^1.0.0",
+    "frontend-essentials": "^1.0.2",
     "prop-types": "^15.7.2",
     "react-error-boundary": "^3.1.3",
     "react-helmet": "^6.1.0",
+    "react-intersection-observer": "^8.32.1",
     "react-swipeable": "^6.2.0",
     "react-textarea-autosize": "^8.3.3",
     "react-transition-group": "^4.4.2",
