--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@babel/runtime": "^7.15.4",
     "clsx": "^1.1.1",
     "frontend-essentials": "^1.0.2",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -33,8 +34,8 @@
     "@babel/preset-env": "^7.15.6",
     "@babel/preset-react": "^7.14.5",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/react": "^12.1.0",
-    "babel-jest": "^27.2.2",
+    "@testing-library/react": "^12.1.1",
+    "babel-jest": "^27.2.3",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
@@ -44,7 +45,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.2.2",
+    "jest": "^27.2.3",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.3.0",
     "postcss": "^8.3.8",
@@ -53,7 +54,7 @@
     "sass": "^1.42.1",
     "sass-loader": "^12.1.0",
     "serve": "^12.0.1",
-    "webpack": "^5.54.0",
+    "webpack": "^5.55.0",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0",
     "workbox-webpack-plugin": "^6.3.0"
