--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,39 +3,39 @@
   "name": "Flying Notes",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "icons/favicon.ico",
       "type": "image/x-icon",
       "sizes": "64x64 32x32 24x24 16x16"
     },
     {
-      "src": "icon_x192.png",
+      "src": "icons/icon_x192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "icon_x384.png",
+      "src": "icons/icon_x384.png",
       "type": "image/png",
       "sizes": "384x384"
     },
     {
-      "src": "icon_x512.png",
+      "src": "icons/icon_x512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "maskable_icon_x192.png",
+      "src": "icons/maskable_icon_x192.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "maskable"
     },
     {
-      "src": "maskable_icon_x384.png",
+      "src": "icons/maskable_icon_x384.png",
       "type": "image/png",
       "sizes": "384x384",
       "purpose": "maskable"
     },
     {
-      "src": "maskable_icon_x512.png",
+      "src": "icons/maskable_icon_x512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
