--- a/package.json
+++ b/package.json
@@ -34,26 +34,28 @@
     "@babel/preset-react": "^7.14.5",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^12.1.2",
-    "babel-jest": "^27.2.4",
+    "babel-jest": "^27.2.5",
     "babel-loader": "^8.2.2",
+    "browserslist": "^4.17.3",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.3.0",
+    "css-loader": "^6.4.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^27.2.4",
+    "jest": "^27.2.5",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.4.2",
     "postcss": "^8.3.9",
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "sass": "^1.42.1",
-    "sass-loader": "^12.1.0",
+    "sass-loader": "^12.2.0",
     "serve": "^12.0.1",
-    "webpack": "^5.58.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0",
     "webpack-dev-server": "^4.3.1",
     "workbox-webpack-plugin": "^6.3.0"
