--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "flyingnotes-client",
   "version": "1.0.0",
+  "author": "Almog Gabay",
+  "license": "ISC",
   "engines": {
     "node": "14.18.1"
   },
@@ -11,14 +13,14 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@babel/runtime": "^7.15.4",
+    "@babel/runtime": "^7.16.0",
     "clsx": "^1.1.1",
-    "frontend-essentials": "^1.5.1",
+    "frontend-essentials": "^1.5.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-error-boundary": "^3.1.3",
+    "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^5.3.0",
     "react-swipeable": "^6.2.0",
@@ -30,35 +32,35 @@
     "workbox-precaching": "^6.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8",
-    "@babel/plugin-transform-runtime": "^7.15.8",
-    "@babel/preset-env": "^7.15.8",
-    "@babel/preset-react": "^7.14.5",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/react": "^12.1.2",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.4.0",
+    "css-loader": "^6.5.0",
     "css-minimizer-webpack-plugin": "^3.1.1",
-    "eslint": "^7.32.0",
+    "eslint": "^8.1.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-webpack-plugin": "^3.0.1",
-    "html-webpack-plugin": "^5.4.0",
+    "eslint-webpack-plugin": "^3.1.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^27.3.1",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.4.3",
     "postcss": "^8.3.11",
     "postcss-loader": "^6.2.0",
     "postcss-preset-env": "^6.7.0",
-    "sass": "^1.43.3",
-    "sass-loader": "^12.2.0",
+    "sass": "^1.43.4",
+    "sass-loader": "^12.3.0",
     "serve": "^12.0.1",
     "style-loader": "^3.3.1",
-    "webpack": "^5.59.1",
+    "webpack": "^5.61.0",
     "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1",
+    "webpack-dev-server": "^4.4.0",
     "workbox-webpack-plugin": "^6.3.0"
   }
 }
