--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
   },
   "scripts": {
     "start": "webpack serve --mode development",
-    "serve": "serve build -p 3000",
+    "serve": "serve build",
     "test": "jest",
     "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.0",
     "clsx": "^1.1.1",
+    "firebase": "^9.3.0",
     "frontend-essentials": "^1.5.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-firebase-hooks": "^4.0.1",
     "react-helmet": "^6.1.0",
     "react-router-dom": "^6.0.0",
     "react-swipeable": "^6.2.0",
