--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": "14.18.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development",
+    "start": "webpack serve --mode development --port 5000",
     "serve": "serve build",
     "test": "jest",
     "build": "webpack --mode production"
