--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flyingnotes-client",
+  "name": "flyingnotes",
   "version": "1.0.0",
   "author": "Almog Gabay",
   "license": "ISC",
@@ -35,7 +35,7 @@
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.16.4",
     "@babel/preset-react": "^7.16.0",
-    "@svgr/webpack": "^6.0.0",
+    "@svgr/webpack": "^6.1.0",
     "@testing-library/react": "^12.1.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -47,7 +47,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.4.2",
+    "jest": "^27.4.3",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.4.5",
     "postcss": "^8.4.4",
