--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "start": "webpack serve --mode development --port 5000",
     "serve": "serve build",
     "test": "jest",
-    "build": "webpack --mode production",
-    "postbuild": "react-snap"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
@@ -54,7 +53,6 @@
     "postcss": "^8.4.4",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.0.1",
-    "react-snap": "^1.23.0",
     "sass": "^1.44.0",
     "sass-loader": "^12.3.0",
     "serve": "^13.0.2",
