--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "node": "14.18.1"
   },
   "scripts": {
-    "start": "webpack serve --mode development --port 5000",
+    "start": "webpack serve --mode development",
     "serve": "serve build",
     "test": "jest",
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.3",
+    "@babel/runtime": "^7.16.5",
     "clsx": "^1.1.1",
-    "firebase": "^9.6.0",
-    "frontend-essentials": "^1.5.2",
+    "firebase": "^9.6.1",
+    "frontend-essentials": "^1.6.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
@@ -24,40 +24,40 @@
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.0.2",
+    "react-router-dom": "^6.2.1",
     "react-textarea-autosize": "^8.3.3",
     "use-click-outside": "^2.0.0",
     "workbox-core": "^6.4.2",
     "workbox-precaching": "^6.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/preset-react": "^7.16.0",
-    "@svgr/webpack": "^6.1.0",
+    "@babel/core": "^7.16.5",
+    "@babel/plugin-transform-runtime": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/preset-react": "^7.16.5",
+    "@svgr/webpack": "^6.1.2",
     "@testing-library/react": "^12.1.2",
-    "babel-jest": "^27.4.2",
+    "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.0.0",
+    "copy-webpack-plugin": "^10.2.0",
     "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.2.0",
-    "eslint": "^8.4.0",
+    "css-minimizer-webpack-plugin": "^3.3.0",
+    "eslint": "^8.5.0",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.4.3",
+    "jest": "^27.4.5",
     "jest-transform-stub": "^2.0.0",
     "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.4",
+    "postcss": "^8.4.5",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.0.1",
-    "sass": "^1.44.0",
-    "sass-loader": "^12.3.0",
+    "postcss-preset-env": "^7.0.2",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
     "serve": "^13.0.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.64.4",
+    "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.6.0",
     "workbox-webpack-plugin": "^6.4.2"
