--- a/package.json
+++ b/package.json
@@ -13,53 +13,50 @@
     "build": "webpack --mode production"
   },
   "dependencies": {
-    "@babel/runtime": "^7.16.5",
+    "@babel/runtime": "^7.17.8",
     "clsx": "^1.1.1",
-    "firebase": "^9.6.1",
-    "frontend-essentials": "^1.6.1",
+    "firebase": "^9.6.10",
+    "frontend-essentials": "^1.9.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "prop-types": "^15.8.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-error-boundary": "^3.1.4",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "^6.2.2",
     "react-textarea-autosize": "^8.3.3",
-    "use-click-outside": "^2.0.0",
-    "workbox-core": "^6.4.2",
-    "workbox-precaching": "^6.4.2"
+    "use-click-outside": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.5",
-    "@babel/plugin-transform-runtime": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/preset-react": "^7.16.5",
-    "@svgr/webpack": "^6.1.2",
-    "@testing-library/react": "^12.1.2",
-    "babel-jest": "^27.4.5",
-    "babel-loader": "^8.2.3",
-    "copy-webpack-plugin": "^10.2.0",
-    "css-loader": "^6.5.1",
-    "css-minimizer-webpack-plugin": "^3.3.0",
-    "eslint": "^8.5.0",
-    "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "@babel/core": "^7.17.8",
+    "@babel/plugin-transform-runtime": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "@svgr/webpack": "^6.2.1",
+    "@testing-library/react": "^12.1.4",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.4",
+    "copy-webpack-plugin": "^10.2.4",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "eslint-webpack-plugin": "^3.1.1",
     "html-webpack-plugin": "^5.5.0",
-    "jest": "^27.4.5",
+    "jest": "^27.5.1",
     "jest-transform-stub": "^2.0.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.5",
+    "mini-css-extract-plugin": "^2.6.0",
+    "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.0.2",
-    "sass": "^1.45.0",
-    "sass-loader": "^12.4.0",
+    "postcss-preset-env": "^7.4.3",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "serve": "^13.0.2",
     "style-loader": "^3.3.1",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0",
-    "workbox-webpack-plugin": "^6.4.2"
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   }
 }
